[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/scene-editor/editor/SceneNode.gd" type="Script" id=1]

[node name="SceneNode" type="GraphNode"]
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 63.0
margin_bottom = 62.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
margin_right = 47.0
margin_bottom = 14.0

[node name="OpenScene" type="Button" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 47.0
margin_bottom = 38.0
disabled = true
text = "Open"

[connection signal="resize_request" from="." to="." method="_on_SceneNode_resize_request"]
[connection signal="pressed" from="VBoxContainer/OpenScene" to="." method="_on_OpenScene_pressed"]
